including documentation help, source code and feedback.  If you are interested
in contributing, please visit http://incubator.apache.org/uima/get-involved.html.

5. How to Report Issues

The Apache UIMA project uses JIRA for issue tracking.  Please report any 
issues you find at http://issues.apache.org/jira/browse/uima.

6. List of JIRA Issues Fixed in this Release

** Bug
    * [UIMA-14] - Plugin manifests still list IBM as the vendor
    * [UIMA-16] - NullPointerException in UIMAFramework.newCollectionProcessingManager
    * [UIMA-20] - PearMerger unit test failure
    * [UIMA-22] - Tools still use IBM splashscreen
    * [UIMA-23] - setUimaClassPath and adjustExamplePaths scripts have incorrect jar names
    * [UIMA-26] - Incorrect paths in example descriptors and the adjustExamplePaths scripts
    * [UIMA-27] - org.apache.uima.cas.test.SofaTest creates file that is not deleted afterwards; moreover, this file has been checked into SVN.
    * [UIMA-29] - Can't call process twice on CPE
    * [UIMA-31] - Document Analyzer doesn't save character encoding in preferences
    * [UIMA-34] - Vinci service deployment descriptor timeoutPeriod parameter does not work.
    * [UIMA-40] - CasAnnotationViewer doesn't support new primitive types
    * [UIMA-41] - LowLevelCAS.ll_getTypeClass() needs to be updated for the new 2.0 types
    * [UIMA-43] - The ';' path separator char is not  replaced with OS dependent char in installed PEAR
    * [UIMA-44] - rename IBMResultPrinter class
    * [UIMA-46] - Duplicate feature name on supertype and subtype does not work if subtype definition comes first in descriptor
    * [UIMA-57] - UimacppAnalysisEngine should be named UimacppAnalysisComponent
    * [UIMA-58] - Resources directory missing from examples project
    * [UIMA-61] - CasCreationUtils.createCas(Collection) silently ignores TypeSystemDescription objects,
    * [UIMA-65] - CAS.setSofaDataString on Initial View throws ArrayIndexOutOfBoundsException