@@ -380,59 +380,64 @@ issues you find at
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-304'>UIMA-304</a>] - Document Analyzer HTML View Not Working</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-308'>UIMA-308</a>] - org.apache.uima.cas.impl.AnnotationBaseImpl.toString() bombs for base annotations without sofa.</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-310'>UIMA-310</a>] - CasCopier fails on null array elements</li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-312'>UIMA-312</a>] - assembly of docs/html missing the css dirs and file</li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-313'>UIMA-313</a>] - Flow Controller example Analysis Engine does not work properly</li>
+
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-314'>UIMA-314</a>] - MeetingFinderCPE_Managed.xml doesn't run on Linux</li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-315'>UIMA-315</a>] - CDE - hover in aggregate page supposed to show description - but isn't</li>
 </ul>
 <h2>Improvement</h2>
 <ul>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-9'>UIMA-9</a>] - Remove support for xi:include</li>
-
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-10'>UIMA-10</a>] - Split JCas into interface and implementation</li>
+
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-11'>UIMA-11</a>] - org.apache.itu package should be renamed</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-24'>UIMA-24</a>] - Uninformative error message when trying to create an AE from a descriptor whose frameworkImplementation is incorrect</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-28'>UIMA-28</a>] - 2.0 examples use deprecated methods</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-33'>UIMA-33</a>] - Do not use same timeout on GetMetadata as is used for Process</li>
-
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-51'>UIMA-51</a>] - Add version number to XCAS (or maybe to CAS built-in typesystem?)</li>
+
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-70'>UIMA-70</a>] - JavaDoc doesn't match impl</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-76'>UIMA-76</a>] - add new pear installer API to install a pear file easily out of an application</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-78'>UIMA-78</a>] - CPE descriptor should support URLs to reference components</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-90'>UIMA-90</a>] - Create eclipse run configurations for startVNS and startVinciService</li>
-
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-91'>UIMA-91</a>] - Remove/hide CAS Initializer Panel in CPE GUI?</li>
+
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-92'>UIMA-92</a>] - Add Logging to WhiteboardFlowController</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-93'>UIMA-93</a>] - Mailing list subscription instructions are not obvious</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-96'>UIMA-96</a>] - XML descriptor capitalization is inconsistent</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-97'>UIMA-97</a>] - OpenNLP wrapper examples should use new annotator interfaces</li>
-
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-104'>UIMA-104</a>] - PackageInstaller and PackageInstallerException need class javadoc comments</li>
+
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-110'>UIMA-110</a>] - TCAS.getAnnotationIndex(Type type) should throw exception if type is not a subtype of annotation.</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-112'>UIMA-112</a>] - Assembly should unpack into a directory</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-116'>UIMA-116</a>] - Always deliver the base CAS to the process method</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-119'>UIMA-119</a>] - Fix docs around result spec to reflect changed design</li>
-
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-120'>UIMA-120</a>] - Logical Structure view of CAS: show view name in unexpanded form of CAS</li>
+
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-121'>UIMA-121</a>] - Documentation Formatting improvements</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-126'>UIMA-126</a>] - add news section to the website</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-132'>UIMA-132</a>] - Provide better support for filenames with spaces in resource URL</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-134'>UIMA-134</a>] - Extend CasCopier to support multiple views</li>
-
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-145'>UIMA-145</a>] - Port CVD documentation to DocBook</li>
+
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-149'>UIMA-149</a>] - Cloning may fail for subclasses of ResultSpecification</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-156'>UIMA-156</a>] - CVD uses deprecated API for setting log file.</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-157'>UIMA-157</a>] - CAS / CasView API refactoring</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-160'>UIMA-160</a>] - Logger properties files live in root directory of distribution</li>
-
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-161'>UIMA-161</a>] - adding documentation for PEAR API</li>
+
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-171'>UIMA-171</a>] - Make CVD look-and-feel configurable</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-173'>UIMA-173</a>] - Create Default Bag Indexes when addFsToIndexes is called but no index has been defined for that type</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-177'>UIMA-177</a>] - JCasGen should notify user when &quot;type merging&quot; has occurred</li>
-
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-178'>UIMA-178</a>] - CVD can not display long string values</li>
+
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-179'>UIMA-179</a>] - Need method JFSIndexRepository.getAllIndexedFS(type)</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-183'>UIMA-183</a>] - (CAS/JCAS).getAnnotationIndex  should declare return type AnnotationIndex</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-184'>UIMA-184</a>] - Add getAnnotationIndex() to JCas API, impl via forwarding to CAS</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-185'>UIMA-185</a>] - Make CAS use same Exception concept as the rest of UIMA</li>
-
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-208'>UIMA-208</a>] - Merge TaeSpecifierSchema.xsd  with resourceSpecifierSchema.xsd</li>
+
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-212'>UIMA-212</a>] - Turn on socket keepAlive in jVinci</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-215'>UIMA-215</a>] - CasCopier constructor should take source CAS as argument</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-216'>UIMA-216</a>] - Add getSupportedXCasVersions to Vinci Services</li>
@@ -451,56 +456,57 @@ issues you find at
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-274'>UIMA-274</a>] - CDE add new feature - not making visible the additional input fields for element types when range type changed</li>
 
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-305'>UIMA-305</a>] - Move FileUtils to non-internal package</li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-311'>UIMA-311</a>] - Docbook build script usability issue</li>
 </ul>
 <h2>New Feature</h2>
 <ul>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-49'>UIMA-49</a>] - Migration tools from IBM UIMA to Apache UIMA</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-62'>UIMA-62</a>] - Provide an example CasMultiplier that merges CASes</li>
-<li>[<a href='https://issues.apache.org/jira/browse/UIMA-152'>UIMA-152</a>] - add component test utilities project</li>
 
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-152'>UIMA-152</a>] - add component test utilities project</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-164'>UIMA-164</a>] - Add source distribution</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-224'>UIMA-224</a>] - Add release signing and verification info</li>
 </ul>
 <h2>Task</h2>
 <ul>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1'>UIMA-1</a>] - Reorganize SVN</li>
-<li>[<a href='https://issues.apache.org/jira/browse/UIMA-2'>UIMA-2</a>] - Fix licensing issues with Eclipse plugins</li>
 
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-2'>UIMA-2</a>] - Fix licensing issues with Eclipse plugins</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-3'>UIMA-3</a>] - Split big book into 4, rewrite to be appropriate for Apache UIMA, redo in DocBook, get it generate high-quality PDF</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-5'>UIMA-5</a>] - re-organize docbook project and update ant build scripts</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-6'>UIMA-6</a>] - Include documentation in assembly</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-7'>UIMA-7</a>] - Add javadocs to build</li>
-<li>[<a href='https://issues.apache.org/jira/browse/UIMA-8'>UIMA-8</a>] - Add examples to assembly</li>
 
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-8'>UIMA-8</a>] - Add examples to assembly</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-15'>UIMA-15</a>] - Semantic Search repackaging</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-21'>UIMA-21</a>] - Update Version Number</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-36'>UIMA-36</a>] - Change descriptor XML namespaces from uima.watson.ibm.com to uima.apache.org</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-37'>UIMA-37</a>] - Track down and replace remaining occurrences of IBM</li>
-<li>[<a href='https://issues.apache.org/jira/browse/UIMA-45'>UIMA-45</a>] - Review and clean up unit tests</li>
 
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-45'>UIMA-45</a>] - Review and clean up unit tests</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-48'>UIMA-48</a>] - Reformat all source code to match adopted conventions</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-64'>UIMA-64</a>] - Remove the package org.apache.uima.tttypesystem</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-103'>UIMA-103</a>] - Add license headers to batch files and shell scripts</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-123'>UIMA-123</a>] - Remove VinciCasObjectProcessorService_impl</li>
-<li>[<a href='https://issues.apache.org/jira/browse/UIMA-135'>UIMA-135</a>] - Remove Entity View mode from DocumentAnalyzer</li>
 
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-135'>UIMA-135</a>] - Remove Entity View mode from DocumentAnalyzer</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-159'>UIMA-159</a>] - Add license/notices etc. files for distribution</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-167'>UIMA-167</a>] - Find and verify Docbook license(s)</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-168'>UIMA-168</a>] - undo CommonCas change</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-172'>UIMA-172</a>] - Status page needs updating</li>
-<li>[<a href='https://issues.apache.org/jira/browse/UIMA-174'>UIMA-174</a>] - Remove @author tags from Java source</li>
 
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-174'>UIMA-174</a>] - Remove @author tags from Java source</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-176'>UIMA-176</a>] - put apache board statuses into a page linked from our uima website and update uima project status page to reflect this</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-180'>UIMA-180</a>] - Update &quot;What's new in Apache UIMA 2.0&quot; section of documentation</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-211'>UIMA-211</a>] - Restructure directory uimaj-tools/src/main/org.apache.uima.jcasgen</li>
-<li>[<a href='https://issues.apache.org/jira/browse/UIMA-232'>UIMA-232</a>] - Documentation screenshots must be redone</li>
 
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-232'>UIMA-232</a>] - Documentation screenshots must be redone</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-240'>UIMA-240</a>] - Fixup Readme - needs to have other material in it, and should have a file extension I think</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-254'>UIMA-254</a>] - Create Release Notes</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-260'>UIMA-260</a>] - Set env vars in setUimaClasspath and the Eclipser run configs</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-295'>UIMA-295</a>] - Restore microscope icon as the window icon for our tools</li>
-<li>[<a href='https://issues.apache.org/jira/browse/UIMA-296'>UIMA-296</a>] - Remove DocBook build files from source distribution</li>
 
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-296'>UIMA-296</a>] - Remove DocBook build files from source distribution</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-299'>UIMA-299</a>] - Remove SNAPSHOT from version numbers prior to release</li>
 </ul>
         
